[gd_scene load_steps=12 format=3 uid="uid://dbtm0318l1a41"]

[ext_resource type="PackedScene" uid="uid://b32k1s77sjr6g" path="res://scenes/paddle.tscn" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://dv7i433q4d5qm" path="res://Scripts/main.gd" id="1_sugp2"]
[ext_resource type="PackedScene" uid="uid://cwjhvcujueaxu" path="res://scenes/ball.tscn" id="2_sugp2"]
[ext_resource type="FontFile" uid="uid://cwdilri6gbnjv" path="res://Assets/Audio/PressStart2P-Regular.ttf" id="4_jyhfs"]
[ext_resource type="Script" uid="uid://02vm5ud0y3h5" path="res://scenes/camera_2d.gd" id="5_tbgi4"]
[ext_resource type="AudioStream" uid="uid://b0vsv2uyhib8r" path="res://Assets/Audio/score.wav" id="6_tefeu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgp6g"]
size = Vector2(10.425, 727)

[sub_resource type="LabelSettings" id="LabelSettings_jyhfs"]
font = ExtResource("4_jyhfs")
font_size = 13

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0wfyh"]

[sub_resource type="Theme" id="Theme_tbgi4"]

[sub_resource type="LabelSettings" id="LabelSettings_sugp2"]
font_size = 20

[node name="Level" type="Node2D"]
script = ExtResource("1_sugp2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -12.0
offset_top = -13.0
offset_right = 1286.0
offset_bottom = 723.0
color = Color(0.15983604, 0.15983604, 0.159836, 1)

[node name="LeftGoal" type="Area2D" parent="."]
collision_mask = 4

[node name="Left" type="CollisionShape2D" parent="LeftGoal"]
position = Vector2(-83, 361)
scale = Vector2(10, 1)
shape = SubResource("RectangleShape2D_sgp6g")

[node name="RightGoal" type="Area2D" parent="."]
collision_mask = 4

[node name="Right" type="CollisionShape2D" parent="RightGoal"]
position = Vector2(1375, 358)
scale = Vector2(10, 1)
shape = SubResource("RectangleShape2D_sgp6g")

[node name="Player1" parent="." instance=ExtResource("1_0wfyh")]
position = Vector2(10, 360)
collision_mask = 4

[node name="Player2" parent="." instance=ExtResource("1_0wfyh")]
position = Vector2(1270, 360)
collision_mask = 4
paddle_id = 2

[node name="ball" parent="." instance=ExtResource("2_sugp2")]
position = Vector2(640, 360)
collision_layer = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreDisplay" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -91.0
offset_top = 42.0
offset_right = 5.0
offset_bottom = 64.78621
grow_horizontal = 2
scale = Vector2(2.0541084, 1.9748789)
text = " 0 - 0"
label_settings = SubResource("LabelSettings_jyhfs")

[node name="UpperWall" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="up" type="CollisionShape2D" parent="UpperWall"]
position = Vector2(639, -38)
rotation = -3.1415925
scale = Vector2(70.347466, -3.750559)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="LowerWall" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="down" type="CollisionShape2D" parent="LowerWall"]
position = Vector2(643, 758)
scale = Vector2(70.347466, -3.750559)
shape = SubResource("RectangleShape2D_0wfyh")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="winner" type="ColorRect" parent="CanvasLayer2"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
color = Color(0.16078432, 0.16078432, 0.16078432, 1)

[node name="winner" type="Label" parent="CanvasLayer2/winner"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -36.0
offset_top = -28.333334
offset_right = 33.0
offset_bottom = -0.33333397
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_tbgi4")
theme_type_variation = &"HeaderMedium"
label_settings = SubResource("LabelSettings_sugp2")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(639, 358)
script = ExtResource("5_tbgi4")

[node name="score" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_tefeu")
volume_db = -15.0
pitch_scale = 1.3

[connection signal="body_entered" from="LeftGoal" to="." method="_on_left_goal_body_entered"]
[connection signal="body_entered" from="RightGoal" to="." method="_on_right_goal_body_entered"]
